# ATMX

./: .env.example  .gitignore  Caddyfile  README.md  deploy.md  docker-compose.prod.yml  docker-compose.yml
deploy/: Caddyfile
docs/: case_studies.json  design.md  (+1 more)
services/risk-api/: Dockerfile  pyproject.toml  requirements.txt
services/risk-api/app/: main.py
services/risk-api/app/api/admin/: routes.py
services/risk-api/app/api/v1/: routes.py
services/risk-api/app/core/: auth.py  config.py  errors.py  middleware.py
services/risk-api/app/models/: schemas.py
services/risk-api/app/services/: forecast.py  market_client.py  pricing.py  settlement_client.py  settlement_cron.py  webhook_dispatcher.py  webhook_store.py
services/risk-api/docs/: api_lifecycle.md
services/settlement-oracle/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
services/settlement-oracle/alembic/: env.py
services/settlement-oracle/alembic/versions/: 001_initial_schema.py
services/settlement-oracle/app/: main.py
services/settlement-oracle/app/api/: routes.py  schemas.py
services/settlement-oracle/app/core/: config.py  database.py  hashing.py
services/settlement-oracle/app/models/: __init__.py  contract.py  observation.py  settlement.py
services/settlement-oracle/app/pipeline/: grib_fetcher.py  grib_parser.py  h3_indexer.py
services/settlement-oracle/app/services/: asos_client.py  settlement_engine.py
services/settlement-oracle/tests/: conftest.py  test_api.py  test_asos_client.py  test_h3_indexer.py  test_hashing.py  test_settlement_engine.py
(+71 files in other folders)
