[project]
name = "atmx-risk-api"
version = "0.1.0"
description = "Developer-facing risk pricing API for ATMX weather derivatives"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
