[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "settlement-oracle"
version = "0.1.0"
description = "NOAA ingestion & weather contract resolution oracle"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring live database",
    "slow: marks slow-running tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
